fix preview image file extension 2.0

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Rooby Dartiny - Portfolio">
     <meta property="og:description" content="Computer Science projects focused on community impact and real-world solutions">
-    <meta property="og:image" content="https://roobydartiny.com/preview.png">
+    <meta property="og:image" content="https://roobydartiny.com/preview.PNG">
     <meta property="og:url" content="https://roobydartiny.com">
     <meta property="og:type" content="website">
     
